[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "xvideos_api"
version = "2.2.2"
description = "A Python API for the Porn Site xvideos.com"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "selectolax",
    "eaf-base-api",
    "m3u8",
]
classifiers = [
    "Programming Language :: Python",
]

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/xvideos_api"

[project.scripts]
xvideos_api = "xvideos_api.xvideos_api:main"

[tool.uv.build-backend]
module-name = "xvideos_api"
module-root = ""
